--- a/5-FEND-Travel-Planner/package.json
+++ b/5-FEND-Travel-Planner/package.json
@@ -1,64 +1,41 @@
 {
-   "name": "udacity_frontend_travel_app",
-   "version": "1.0.0",
-   "description": "Capstone Project Travel App for Udacity Frontend Nanodegree course.",
-   "scripts": {
-      "test": "jest",
-      "devel-server": "nodemon src/server/server.js",
-      "devel-build": "webpack-dev-server --config webpack.dev.js --open firefox",
-      "prod-server": "node src/server/server.js",
-      "prod-build": "webpack --config webpack.prod.js",
-      "start-dev": "npm-run-all --parallel devel-*",
-      "dev": "npm run devel-build",
-      "build": "npm run prod-build",
-      "start": "npm-run-all prod-build prod-server"
-   },
-   "keywords": [
-      "udacity",
-      "capstone",
-      "travel-app",
-      "frontend",
-      "nanodegree",
-      "openweather"
-   ],
-   "author": "dj08",
-   "license": "MIT",
-   "dependencies": {
-      "body-parser": "^1.19.0",
-      "cors": "^2.8.5",
-      "dotenv": "^8.2.0",
-      "express": "^4.17.1",
-      "node-constants": "0.0.2",
-      "node-fetch": "^2.6.0",
-      "os": "^0.1.1",
-      "request": "^2.88.0",
-      "webpack": "^4.41.4",
-      "webpack-cli": "^3.3.10",
-      "workbox-webpack-plugin": "^4.3.1"
-   },
-   "devDependencies": {
-      "@babel/core": "^7.7.7",
-      "@babel/plugin-transform-runtime": "^7.7.6",
-      "@babel/preset-env": "^7.7.7",
-      "babel-loader": "^8.0.6",
-      "babel-polyfill": "^6.26.0",
-      "clean-webpack-plugin": "^3.0.0",
-      "css-loader": "^3.4.0",
-      "eslint": "^6.8.0",
-      "eslint-loader": "^3.0.3",
-      "fibers": "^4.0.2",
-      "html-webpack-plugin": "^3.2.0",
-      "jest": "^24.9.0",
-      "mini-css-extract-plugin": "^0.9.0",
-      "nodemon": "^2.0.2",
-      "npm-run-all": "^4.1.5",
-      "optimize-css-assets-webpack-plugin": "^5.0.3",
-      "regenerator-runtime": "^0.13.3",
-      "sass": "^1.24.0",
-      "sass-loader": "^8.0.0",
-      "style-loader": "^1.1.2",
-      "webpack-bundle-analyzer": "^3.6.0",
-      "webpack-dev-server": "^3.10.1",
-      "webpack-merge": "^4.2.2"
-   }
+  "name": "fend-travel-app-capstone-project",
+  "version": "1.0.0",
+  "description": "Final project of Udacity FEND Nanodegree program.",
+  "main": "index.js",
+  "scripts": {
+    "test": "jest",
+    "start": "node src/server/server.js",
+    "build": "webpack --config webpack.prod.js",
+    "dev": "webpack-dev-server  --config webpack.dev.js --open  "
+  },
+  "dependencies": {
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
+    "experss": "0.0.1-security",
+    "express": "^4.17.1",
+    "mini-css-extract-plugin": "^0.9.0",
+    "node-fetch": "^2.6.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.3",
+    "supertest": "^4.0.2",
+    "terser-webpack-plugin": "^2.3.5",
+    "webpack": "^4.35.3",
+    "webpack-cli": "^3.3.11"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.9.0",
+    "@babel/preset-env": "^7.9.0",
+    "babel-loader": "^8.1.0",
+    "clean-webpack-plugin": "^3.0.0",
+    "css-loader": "^3.4.2",
+    "eslint": "^6.8.0",
+    "html-webpack-plugin": "^3.2.0",
+    "jest": "^25.2.7",
+    "node-sass": "^4.13.1",
+    "sass-loader": "^8.0.2",
+    "style-loader": "^1.1.3",
+    "webpack-dev-server": "^3.10.3",
+    "workbox-webpack-plugin": "^5.1.2"
+  }
 }
