--- a/5-FEND-Travel-Planner/package.json
+++ b/5-FEND-Travel-Planner/package.json
@@ -13,9 +13,11 @@
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
+    "dotenv-webpack": "^1.7.0",
     "experss": "0.0.1-security",
     "express": "^4.17.1",
     "mini-css-extract-plugin": "^0.9.0",
+    "node-env-run": "^3.0.2",
     "node-fetch": "^2.6.0",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "supertest": "^4.0.2",
